--- a/module_base/src/main/res/values/colors.xml
+++ b/module_base/src/main/res/values/colors.xml
@@ -1,14 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
     <color name="white">#FFFFFF</color>
-    <color name="transparent">#00000000</color>
-    <color name="deep_red">#F24357</color>
+    <color name="black">#000000</color>
+    <color name="gray">#808080</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="green">#008000</color>
+    <color name="blue">#0000FF</color>
+    <color name="orange">#FFA500</color>
 
-    <color name="color_666666">#666666</color>
+    <array name="in_colors_light">
+        <item>#4B03A9F4</item>
+        <item>#3303A9F4</item>
+        <item>#1903A9F4</item>
+    </array>
+
     <color name="color_333333">#333333</color>
+    <color name="transparent">#00000000</color>
     <color name="color_F6F6F6">#F6F6F6</color>
-
 </resources>
